ofc forth commit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     //todo nav fragment dependency
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
+
+    //todo dexter dependency
+    implementation 'com.karumi:dexter:6.2.3'
 }
